lab1/Code/syntax.output
语法

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExDef ExtDefList
    3           | %empty

    4 ExDef: Specifier ExtDecList SEMI
    5      | Specifier SEMI
    6      | Specifier FunDec CompSt
    7      | Specifier error SEMI
    8      | error ExtDecList SEMI
    9      | error SEMI

   10 ExtDecList: VarDec
   11           | VarDec COMMA ExtDecList

   12 Specifier: TYPE
   13          | StructSpecifier

   14 StructSpecifier: STRUCT OptTag LC DefList RC
   15                | STRUCT Tag

   16 OptTag: ID
   17       | %empty

   18 Tag: ID

   19 VarDec: ID
   20       | VarDec LB INT RB
   21       | VarDec LB error RB

   22 FunDec: ID LP VarList RP
   23       | ID LP RP
   24       | ID LP error RP

   25 VarList: ParamDec COMMA VarList
   26        | ParamDec

   27 ParamDec: Specifier VarDec

   28 CompSt: LC DefList StmList RC
   29       | LC error RC

   30 StmList: Stmt StmList
   31        | %empty

   32 Stmt: Exp SEMI
   33     | CompSt
   34     | RETURN Exp SEMI
   35     | IF LP Exp RP Stmt
   36     | IF LP Exp RP Stmt ELSE Stmt
   37     | WHILE LP Exp RP Stmt

   38 DefList: Def DefList
   39        | %empty

   40 Def: Specifier DecList SEMI
   41    | error SEMI

   42 DecList: Dec
   43        | Dec COMMA DecList

   44 Dec: VarDec
   45    | VarDec ASSIGNOP Exp

   46 Exp: Exp ASSIGNOP Exp
   47    | Exp AND Exp
   48    | Exp OR Exp
   49    | Exp RELOP Exp
   50    | Exp PLUS Exp
   51    | Exp MINUS Exp
   52    | Exp STAR Exp
   53    | Exp DIV Exp
   54    | LP Exp RP
   55    | MINUS Exp
   56    | NOT Exp
   57    | ID LP Args RP
   58    | ID LP RP
   59    | Exp LB Exp RB
   60    | Exp DOT ID
   61    | ID
   62    | INT
   63    | FLOAT
   64    | LP error RP
   65    | ID LP error RP
   66    | Exp LB error RB

   67 Args: Exp COMMA Args
   68     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 8 9 21 24 29 41 64 65 66
TYPE (258) 12
ID (259) 16 18 19 22 23 24 57 58 60 61 65
INT (260) 20 62
FLOAT (261) 63
LC (262) 14 28 29
RC (263) 14 28 29
IF (264) 35 36
WHILE (265) 37
STRUCT (266) 14 15
RETURN (267) 34
SEMI (268) 4 5 7 8 9 32 34 40 41
COMMA (269) 11 25 43 67
LOWER_THAN_ELSE (270)
ELSE (271) 36
ASSIGNOP (272) 45 46
OR (273) 48
AND (274) 47
RELOP (275) 49
PLUS (276) 50
MINUS (277) 51 55
STAR (278) 52
DIV (279) 53
NOT (280) 56
LP (281) 22 23 24 35 36 37 54 57 58 64 65
RP (282) 22 23 24 35 36 37 54 57 58 64 65
LB (283) 20 21 59 66
RB (284) 20 21 59 66
DOT (285) 60


Nonterminals, with rules where they appear

$accept (31)
    左： 0
Program (32)
    左： 1, 右： 0
ExtDefList (33)
    左： 2 3, 右： 1 2
ExDef (34)
    左： 4 5 6 7 8 9, 右： 2
ExtDecList (35)
    左： 10 11, 右： 4 8 11
Specifier (36)
    左： 12 13, 右： 4 5 6 7 27 40
StructSpecifier (37)
    左： 14 15, 右： 13
OptTag (38)
    左： 16 17, 右： 14
Tag (39)
    左： 18, 右： 15
VarDec (40)
    左： 19 20 21, 右： 10 11 20 21 27 44 45
FunDec (41)
    左： 22 23 24, 右： 6
VarList (42)
    左： 25 26, 右： 22 25
ParamDec (43)
    左： 27, 右： 25 26
CompSt (44)
    左： 28 29, 右： 6 33
StmList (45)
    左： 30 31, 右： 28 30
Stmt (46)
    左： 32 33 34 35 36 37, 右： 30 35 36 37
DefList (47)
    左： 38 39, 右： 14 28 38
Def (48)
    左： 40 41, 右： 38
DecList (49)
    左： 42 43, 右： 40 43
Dec (50)
    左： 44 45, 右： 42 43
Exp (51)
    左： 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64
    65 66, 右： 32 34 35 36 37 45 46 47 48 49 50 51 52 53 54 55 56
    59 60 66 67 68
Args (52)
    左： 67 68, 右： 57 67


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          转到状态 4
    ExtDefList       转到状态 5
    ExDef            转到状态 6
    Specifier        转到状态 7
    StructSpecifier  转到状态 8


State 1

    8 ExDef: error . ExtDecList SEMI
    9      | error . SEMI

    ID    shift, and go to state 9
    SEMI  shift, and go to state 10

    ExtDecList  转到状态 11
    VarDec      转到状态 12


State 2

   12 Specifier: TYPE .

    $default  reduce using rule 12 (Specifier)


State 3

   14 StructSpecifier: STRUCT . OptTag LC DefList RC
   15                | STRUCT . Tag

    ID  shift, and go to state 13

    $default  reduce using rule 17 (OptTag)

    OptTag  转到状态 14
    Tag     转到状态 15


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 16


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       转到状态 17
    ExDef            转到状态 6
    Specifier        转到状态 7
    StructSpecifier  转到状态 8


State 7

    4 ExDef: Specifier . ExtDecList SEMI
    5      | Specifier . SEMI
    6      | Specifier . FunDec CompSt
    7      | Specifier . error SEMI

    error  shift, and go to state 18
    ID     shift, and go to state 19
    SEMI   shift, and go to state 20

    ExtDecList  转到状态 21
    VarDec      转到状态 12
    FunDec      转到状态 22


State 8

   13 Specifier: StructSpecifier .

    $default  reduce using rule 13 (Specifier)


State 9

   19 VarDec: ID .

    $default  reduce using rule 19 (VarDec)


State 10

    9 ExDef: error SEMI .

    $default  reduce using rule 9 (ExDef)


State 11

    8 ExDef: error ExtDecList . SEMI

    SEMI  shift, and go to state 23


State 12

   10 ExtDecList: VarDec .
   11           | VarDec . COMMA ExtDecList
   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB error RB

    COMMA  shift, and go to state 24
    LB     shift, and go to state 25

    $default  reduce using rule 10 (ExtDecList)


State 13

   16 OptTag: ID .
   18 Tag: ID .

    LC        reduce using rule 16 (OptTag)
    $default  reduce using rule 18 (Tag)


State 14

   14 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 26


State 15

   15 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 15 (StructSpecifier)


State 16

    0 $accept: Program $end .

    $default  接受


State 17

    2 ExtDefList: ExDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 18

    7 ExDef: Specifier error . SEMI

    SEMI  shift, and go to state 27


State 19

   19 VarDec: ID .
   22 FunDec: ID . LP VarList RP
   23       | ID . LP RP
   24       | ID . LP error RP

    LP  shift, and go to state 28

    $default  reduce using rule 19 (VarDec)


State 20

    5 ExDef: Specifier SEMI .

    $default  reduce using rule 5 (ExDef)


State 21

    4 ExDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 29


State 22

    6 ExDef: Specifier FunDec . CompSt

    LC  shift, and go to state 30

    CompSt  转到状态 31


State 23

    8 ExDef: error ExtDecList SEMI .

    $default  reduce using rule 8 (ExDef)


State 24

   11 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 9

    ExtDecList  转到状态 32
    VarDec      转到状态 12


State 25

   20 VarDec: VarDec LB . INT RB
   21       | VarDec LB . error RB

    error  shift, and go to state 33
    INT    shift, and go to state 34


State 26

   14 StructSpecifier: STRUCT OptTag LC . DefList RC

    error   shift, and go to state 35
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 39 (DefList)

    Specifier        转到状态 36
    StructSpecifier  转到状态 8
    DefList          转到状态 37
    Def              转到状态 38


State 27

    7 ExDef: Specifier error SEMI .

    $default  reduce using rule 7 (ExDef)


State 28

   22 FunDec: ID LP . VarList RP
   23       | ID LP . RP
   24       | ID LP . error RP

    error   shift, and go to state 39
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3
    RP      shift, and go to state 40

    Specifier        转到状态 41
    StructSpecifier  转到状态 8
    VarList          转到状态 42
    ParamDec         转到状态 43


State 29

    4 ExDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExDef)


State 30

   28 CompSt: LC . DefList StmList RC
   29       | LC . error RC

    error   shift, and go to state 44
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    ID      reduce using rule 39 (DefList)
    INT     reduce using rule 39 (DefList)
    FLOAT   reduce using rule 39 (DefList)
    LC      reduce using rule 39 (DefList)
    RC      reduce using rule 39 (DefList)
    IF      reduce using rule 39 (DefList)
    WHILE   reduce using rule 39 (DefList)
    RETURN  reduce using rule 39 (DefList)
    MINUS   reduce using rule 39 (DefList)
    NOT     reduce using rule 39 (DefList)
    LP      reduce using rule 39 (DefList)

    Specifier        转到状态 36
    StructSpecifier  转到状态 8
    DefList          转到状态 45
    Def              转到状态 38


State 31

    6 ExDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExDef)


State 32

   11 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 11 (ExtDecList)


State 33

   21 VarDec: VarDec LB error . RB

    RB  shift, and go to state 46


State 34

   20 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 47


State 35

   41 Def: error . SEMI

    SEMI  shift, and go to state 48


State 36

   40 Def: Specifier . DecList SEMI

    ID  shift, and go to state 9

    VarDec   转到状态 49
    DecList  转到状态 50
    Dec      转到状态 51


State 37

   14 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 52


State 38

   38 DefList: Def . DefList

    error   shift, and go to state 35
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    ID      reduce using rule 39 (DefList)
    INT     reduce using rule 39 (DefList)
    FLOAT   reduce using rule 39 (DefList)
    LC      reduce using rule 39 (DefList)
    RC      reduce using rule 39 (DefList)
    IF      reduce using rule 39 (DefList)
    WHILE   reduce using rule 39 (DefList)
    RETURN  reduce using rule 39 (DefList)
    MINUS   reduce using rule 39 (DefList)
    NOT     reduce using rule 39 (DefList)
    LP      reduce using rule 39 (DefList)

    Specifier        转到状态 36
    StructSpecifier  转到状态 8
    DefList          转到状态 53
    Def              转到状态 38


State 39

   24 FunDec: ID LP error . RP

    RP  shift, and go to state 54


State 40

   23 FunDec: ID LP RP .

    $default  reduce using rule 23 (FunDec)


State 41

   27 ParamDec: Specifier . VarDec

    ID  shift, and go to state 9

    VarDec  转到状态 55


State 42

   22 FunDec: ID LP VarList . RP

    RP  shift, and go to state 56


State 43

   25 VarList: ParamDec . COMMA VarList
   26        | ParamDec .

    COMMA  shift, and go to state 57

    $default  reduce using rule 26 (VarList)


State 44

   29 CompSt: LC error . RC
   41 Def: error . SEMI

    RC    shift, and go to state 58
    SEMI  shift, and go to state 48


State 45

   28 CompSt: LC DefList . StmList RC

    ID      shift, and go to state 59
    INT     shift, and go to state 60
    FLOAT   shift, and go to state 61
    LC      shift, and go to state 30
    IF      shift, and go to state 62
    WHILE   shift, and go to state 63
    RETURN  shift, and go to state 64
    MINUS   shift, and go to state 65
    NOT     shift, and go to state 66
    LP      shift, and go to state 67

    $default  reduce using rule 31 (StmList)

    CompSt   转到状态 68
    StmList  转到状态 69
    Stmt     转到状态 70
    Exp      转到状态 71


State 46

   21 VarDec: VarDec LB error RB .

    $default  reduce using rule 21 (VarDec)


State 47

   20 VarDec: VarDec LB INT RB .

    $default  reduce using rule 20 (VarDec)


State 48

   41 Def: error SEMI .

    $default  reduce using rule 41 (Def)


State 49

   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB error RB
   44 Dec: VarDec .
   45    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 72
    LB        shift, and go to state 25

    $default  reduce using rule 44 (Dec)


State 50

   40 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 73


State 51

   42 DecList: Dec .
   43        | Dec . COMMA DecList

    COMMA  shift, and go to state 74

    $default  reduce using rule 42 (DecList)


State 52

   14 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 14 (StructSpecifier)


State 53

   38 DefList: Def DefList .

    $default  reduce using rule 38 (DefList)


State 54

   24 FunDec: ID LP error RP .

    $default  reduce using rule 24 (FunDec)


State 55

   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB error RB
   27 ParamDec: Specifier VarDec .

    LB  shift, and go to state 25

    $default  reduce using rule 27 (ParamDec)


State 56

   22 FunDec: ID LP VarList RP .

    $default  reduce using rule 22 (FunDec)


State 57

   25 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        转到状态 41
    StructSpecifier  转到状态 8
    VarList          转到状态 75
    ParamDec         转到状态 43


State 58

   29 CompSt: LC error RC .

    $default  reduce using rule 29 (CompSt)


State 59

   57 Exp: ID . LP Args RP
   58    | ID . LP RP
   61    | ID .
   65    | ID . LP error RP

    LP  shift, and go to state 76

    $default  reduce using rule 61 (Exp)


State 60

   62 Exp: INT .

    $default  reduce using rule 62 (Exp)


State 61

   63 Exp: FLOAT .

    $default  reduce using rule 63 (Exp)


State 62

   35 Stmt: IF . LP Exp RP Stmt
   36     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 77


State 63

   37 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 78


State 64

   34 Stmt: RETURN . Exp SEMI

    ID     shift, and go to state 59
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  转到状态 79


State 65

   55 Exp: MINUS . Exp

    ID     shift, and go to state 59
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  转到状态 80


State 66

   56 Exp: NOT . Exp

    ID     shift, and go to state 59
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  转到状态 81


State 67

   54 Exp: LP . Exp RP
   64    | LP . error RP

    error  shift, and go to state 82
    ID     shift, and go to state 59
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  转到状态 83


State 68

   33 Stmt: CompSt .

    $default  reduce using rule 33 (Stmt)


State 69

   28 CompSt: LC DefList StmList . RC

    RC  shift, and go to state 84


State 70

   30 StmList: Stmt . StmList

    ID      shift, and go to state 59
    INT     shift, and go to state 60
    FLOAT   shift, and go to state 61
    LC      shift, and go to state 30
    IF      shift, and go to state 62
    WHILE   shift, and go to state 63
    RETURN  shift, and go to state 64
    MINUS   shift, and go to state 65
    NOT     shift, and go to state 66
    LP      shift, and go to state 67

    $default  reduce using rule 31 (StmList)

    CompSt   转到状态 68
    StmList  转到状态 85
    Stmt     转到状态 70
    Exp      转到状态 71


State 71

   32 Stmt: Exp . SEMI
   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . MINUS Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   59    | Exp . LB Exp RB
   60    | Exp . DOT ID
   66    | Exp . LB error RB

    SEMI      shift, and go to state 86
    ASSIGNOP  shift, and go to state 87
    OR        shift, and go to state 88
    AND       shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    LB        shift, and go to state 95
    DOT       shift, and go to state 96


State 72

   45 Dec: VarDec ASSIGNOP . Exp

    ID     shift, and go to state 59
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  转到状态 97


State 73

   40 Def: Specifier DecList SEMI .

    $default  reduce using rule 40 (Def)


State 74

   43 DecList: Dec COMMA . DecList

    ID  shift, and go to state 9

    VarDec   转到状态 49
    DecList  转到状态 98
    Dec      转到状态 51


State 75

   25 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 25 (VarList)


State 76

   57 Exp: ID LP . Args RP
   58    | ID LP . RP
   65    | ID LP . error RP

    error  shift, and go to state 99
    ID     shift, and go to state 59
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67
    RP     shift, and go to state 100

    Exp   转到状态 101
    Args  转到状态 102


State 77

   35 Stmt: IF LP . Exp RP Stmt
   36     | IF LP . Exp RP Stmt ELSE Stmt

    ID     shift, and go to state 59
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  转到状态 103


State 78

   37 Stmt: WHILE LP . Exp RP Stmt

    ID     shift, and go to state 59
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  转到状态 104


State 79

   34 Stmt: RETURN Exp . SEMI
   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . MINUS Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   59    | Exp . LB Exp RB
   60    | Exp . DOT ID
   66    | Exp . LB error RB

    SEMI      shift, and go to state 105
    ASSIGNOP  shift, and go to state 87
    OR        shift, and go to state 88
    AND       shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    LB        shift, and go to state 95
    DOT       shift, and go to state 96


State 80

   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . MINUS Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   55    | MINUS Exp .
   59    | Exp . LB Exp RB
   60    | Exp . DOT ID
   66    | Exp . LB error RB

    STAR  shift, and go to state 93
    DIV   shift, and go to state 94
    LB    shift, and go to state 95
    DOT   shift, and go to state 96

    $default  reduce using rule 55 (Exp)


State 81

   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . MINUS Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   56    | NOT Exp .
   59    | Exp . LB Exp RB
   60    | Exp . DOT ID
   66    | Exp . LB error RB

    LB   shift, and go to state 95
    DOT  shift, and go to state 96

    $default  reduce using rule 56 (Exp)


State 82

   64 Exp: LP error . RP

    RP  shift, and go to state 106


State 83

   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . MINUS Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   54    | LP Exp . RP
   59    | Exp . LB Exp RB
   60    | Exp . DOT ID
   66    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 87
    OR        shift, and go to state 88
    AND       shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    RP        shift, and go to state 107
    LB        shift, and go to state 95
    DOT       shift, and go to state 96


State 84

   28 CompSt: LC DefList StmList RC .

    $default  reduce using rule 28 (CompSt)


State 85

   30 StmList: Stmt StmList .

    $default  reduce using rule 30 (StmList)


State 86

   32 Stmt: Exp SEMI .

    $default  reduce using rule 32 (Stmt)


State 87

   46 Exp: Exp ASSIGNOP . Exp

    ID     shift, and go to state 59
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  转到状态 108


State 88

   48 Exp: Exp OR . Exp

    ID     shift, and go to state 59
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  转到状态 109


State 89

   47 Exp: Exp AND . Exp
